# DinDin

./: pyproject.toml  requirements.txt  vercel.json
apps/categorias/: forms.py  models.py  urls.py  views.py
apps/categorias/migrations/: 0001_initial.py  (+3 more)
apps/conta/: forms.py  models.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/subcategorias/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/transacoes/: admin.py  forms.py  models.py  urls.py  views.py
apps/usuarios/: forms.py  views.py
setup/: settings.py  urls.py
static/scripts/: filtro_categorias.js  home.js
static/styles/: categorias.css  contas.css  criar_conta.css  criar_subcategoria.css  criar_transacao.css  index.css  login.css  menu_lateral.css  style.css  subcategorias.css  transacoes.css
templates/categorias/: categorias.html  criar_categoria.html  criar_subcategoria.html  editar_categoria.html  editar_subcategoria .html  subcategorias.html
templates/contas/: contas.html  criar_conta.html  editar_conta.html
templates/dashboard/: graficos_anual.html  index.html  index_anual.html  relatorios.html
templates/partials/: _menu_lateral.html
templates/shared/: base.html
templates/transacoes/: criar_transacao.html  criar_transacao_modelo.html  criar_transacao_parcelada.html  criar_transferencia.html  duplicar_transacao.html  editar_parcela.html  editar_transacao.html  editar_transacao_modelo.html  editar_transferencia.html  listar_parcelas.html  listar_transacoes.html  listar_transacoes_modelo.html
templates/usuarios/: cadastro.html  login.html
(+35 files in other folders)
