[tool.poetry]
name = "dindin"
version = "0.1.0"
description = ""
authors = ["Leandro Machado <leandrovictoram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
